organize-collection-view: Cancel set_collection_job during destruction

https://gitlab.gnome.org/GNOME/gnome-photos/issues/43